# virtdisk-rs

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
src/: diskutilities.rs  errorcodes.rs  lib.rs  vhdutilities.rs  virtdisk.rs  virtdisk_bindings.rs  virtdiskdefs.rs  winutilities.rs
tests/: integration_test.rs
