[package]
name = "virtdisk-rs"
version = "0.1.0"
authors = ["rafawo <rafawo1@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Rust abstractions for VirtDisk APIs."
repository = "https://github.com/rafawo/virtdisk-rs"
readme = "README.md"
keywords = ["windows", "virtdisk"]
categories = ["api-bindings", "os::windows-apis"]
build = "build.rs"

[dependencies]
libc = "0.2.44"
widestring = "0.4.0"
